Fixed transparency on mobile.

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -16,10 +16,6 @@
     font-weight: 300;
 }
 
-.nav-link:hover {
-    color: rgba(0,0,0,1) !important;
-}
-
 #logo {
     color: #fff;
     font-size: 2em;
@@ -39,14 +35,21 @@ hr {
     width: 100%;
 }
 
-.mobile > a {
-    color: #4A4A4B !important;
+.mobile > a:hover {
+    margin-left: .2em;
 }
 
-.mobile > a:hover {
-    margin-left: .5em;
+.nav-link {
+    color: #ccc !important;
 }
 
 .nav-link:hover {
     color: #fff !important;
+}
+
+@media screen and (max-width: 990px) {
+    .navbar {
+        background: #000033 !important;
+        box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
+    }
 }
